# Lane-keeping

./: README.md
Assignment/: Symbolic.mlx  main.mlx
Assignment_Seuffo_Akounha_Ngoune_19114/: A1matrix.asv  Amatrix.m  Bmatrix.m  deltaf.m  global_positions.slx  global_positions.slxc  steering_angle.fig  task1_init.m  task1_plot.asv  task1_plot.m  task2_init.asv  task2_init.m  task2_plot.m  untitled50.fig
Assignments_seuffo_akouanha-ngoune/: AmatrixAndB_dmatrix.m  Assignment1_task1.m  Assignment3_task_x2.m  B1matrix.m  B_dmatrix.m  K_update_vel_interval.m  MPC_Implementation.m  MPC_obstacle.m  PolePlacement.m  SolveMPC_left_turn.m  SolveMPC_obstacles.m  Velocity_integrator.m  adaptCostParameters.m  computeMatrices.m  generate_obstacle_constraints.m  is_close_to_obstacle.m  num_parameters.m  parameter_init.m  reference_path_mpc_left.m  reference_path_mpc_right.m
EKF_assignment/muner_assignment_2023/: readme.md
Kalman code snippets/: ex_kalman_1D.py  ex_kalman_2D.py
Path Following(Lqr+MPC)/: Amatrix.m  Assignment2_task1.m  Assignment2_task2.m  Assignment3_task_x1.m  Assignment3_task_x3.m  Desired_path.m  LQR.m  Lower_Upper_bounds.m  PI.m  PIC.m  PI_tune.m  SolveMPC.m  delta.m  feedforward.m  plotVehicleData.m  reference_mpc_left_turn.m  reference_path_mpc.m  specifications.m  test.m  xdot.m  xdotPP.m
ProgrammingTutorialCode/tutorial_renderer_finished/: CMakeLists.txt
ProgrammingTutorialCode/tutorial_renderer_finished/include/: Box.hpp  Renderer.hpp
ProgrammingTutorialCode/tutorial_renderer_finished/src/: Renderer.cpp  main.cpp
assignment_1/: CMakeLists.txt
(+76 files in other folders)
